# hyperspace

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  HACKING.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/src/main/java/kz/ilotterytea/hyperspace/android/: AndroidLauncher.java
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
core/src/main/java/kz/ilotterytea/hyperspace/: FirstScreen.java  HyperspaceGame.java  SharedConstants.java
core/src/main/java/kz/ilotterytea/hyperspace/entities/: Star.java
core/src/main/java/kz/ilotterytea/hyperspace/screens/: GameScreen.java
core/src/main/java/kz/ilotterytea/hyperspace/world/: Starfield.java
html/: build.gradle
html/src/main/java/kz/ilotterytea/hyperspace/: GdxDefinition.gwt.xml  GdxDefinitionSuperdev.gwt.xml
html/src/main/java/kz/ilotterytea/hyperspace/gwt/: GwtLauncher.java
lwjgl3/: build.gradle
lwjgl3/src/main/java/kz/ilotterytea/hyperspace/lwjgl3/: Lwjgl3Launcher.java
source/: lib.cpp
src/: constants.h  main.c  main.rs  star.c  star.h  star.rs
test/: CMakeLists.txt
test/source/: hyperspace_test.cpp
